[package]
name = "multithreaded-web-server"
version = "0.1.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "web_server"
path = "src/lib/lib.rs"

[[bin]]
name = "multithreaded_web_server"
path = "src/bin/main.rs"

[dependencies]
